Added icons but without functions yet

--- a/src/index.css
+++ b/src/index.css
@@ -124,8 +124,7 @@ h2 {
   cursor: pointer;
 }
 
-.gentleman.selected .gentleman__icon,
-.gentleman:hover .gentleman__icon {
+.gentleman.selected .gentleman__icon {
   display: flex;
   justify-content: center;
   align-items: center;
